--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=omega
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+spring.mvc.format.date=dd/MM/yyyy
